--- a/web.config
+++ b/web.config
@@ -19,5 +19,6 @@
     </defaultDocument>
     
     <customErrors mode="Off" />
+    <httpErrors errorMode="Detailed"></httpErrors>
   </system.webServer>
 </configuration>
