--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,11 +8,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "postinstall": "npm run build",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
